crates/au-cli/tests/it/snapshots/it__scenarios__def-ref-closure-mismatch.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "def-ref-closure-mismatch",
      "message": "field 'propose-tool' references type-def 'mcp.resource' but its parent closure does not include the required type 'mcp.tool'",
      "related": [
        {
          "file": "<root>/scenarios/def-ref-closure-mismatch/type/mode.type.yaml",
          "line_col": {
            "end": {
              "col": 32,
              "line": 3
            },
            "start": {
              "col": 17,
              "line": 3
            }
          },
          "range": {
            "end": 111,
            "start": 96
          }
        }
      ],
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/def-ref-closure-mismatch/an-induction-mode.md",
        "line_col": {
          "end": {
            "col": 33,
            "line": 3
          },
          "start": {
            "col": 15,
            "line": 3
          }
        },
        "range": {
          "end": 47,
          "start": 29
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 30,
                        "line_col": {
                          "end": {
                            "col": 31,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/def-ref-closure-mismatch/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "def-ref-closure-mismatch"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "def-ref-closure-mismatch"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/def-ref-closure-mismatch/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [],
        "claim": [
          "mode"
        ],
        "closure": [
          "mode"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "propose-tool",
            "origins": [
              {
                "name": "mode",
                "origin_path": "<root>/scenarios/def-ref-closure-mismatch/type/mode.type.yaml",
                "required": true,
                "shape": "type<mcp.tool>*"
              }
            ],
            "required": true,
            "shape": "type<mcp.tool>*"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 47,
                        "line_col": {
                          "end": {
                            "col": 33,
                            "line": 3
                          },
                          "start": {
                            "col": 15,
                            "line": 3
                          }
                        },
                        "start": 29
                      },
                      "file": "<root>/scenarios/def-ref-closure-mismatch/an-induction-mode.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "anchor": null,
                      "block_id": null,
                      "kind": "reference",
                      "target": "mcp.resource"
                    }
                  }
                ],
                "value": {
                  "anchor": null,
                  "block_id": null,
                  "kind": "reference",
                  "target": "mcp.resource"
                }
              }
            ],
            "field": "propose-tool"
          }
        ],
        "file": "<root>/scenarios/def-ref-closure-mismatch/an-induction-mode.md",
        "section_presence": null
      }
    ]
  }
}
